<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_code_book"
            android:title="@string/code_book" />
        <item
            android:id="@+id/nav_author"
            android:icon="@drawable/ic_contact_author"
            android:title="@string/contact_author" />
    </group>

    <item android:title="@string/nav_tools">
        <menu>
            <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic_menu_sync"
                android:title="@string/nav_synchronize" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
