<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        style="@style/TextMediumContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confirm_deletion_of_this_memory" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/TextWhiteContent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="cancelDeletion"
            android:background="@drawable/selector_fillet_red"
            android:padding="@dimen/widget_margin"
            android:gravity="center"
            android:text="@string/no"/>

        <TextView
            style="@style/TextWhiteContent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/widget_margin"
            android:clickable="true"
            android:onClick="confirmDeletion"
            android:background="@drawable/selector_fillet_green"
            android:padding="@dimen/widget_margin"
            android:gravity="center"
            android:text="@string/yes" />
    </LinearLayout>
</LinearLayout>