<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tenderness="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.SettingsActivity">

    <com.yarenchoi.tenderness.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tenderness:titleBarLeftImage="@drawable/ic_gf_back"
        tenderness:titleBarTitle="@string/nav_settings" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/TextMediumContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/night_mode" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sc_night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/common_tab_bg"
        android:gravity="center_vertical"
        android:onClick="showLanguageDialog"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/TextMediumContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language" />

        <TextView
            android:id="@+id/tv_language"
            style="@style/TextSmallContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:onClick="cleanCache"
        android:background="@drawable/common_tab_bg"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/TextMediumContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/clean_cache" />
    </RelativeLayout>
</LinearLayout>